# ramfs

./: CMakeLists.txt  Kconfig  README.md  idf_component.yml  meson.build  meson_options.txt
.github/workflows/: upload_component.yaml
cmake/: files.cmake  standalone.cmake
docs/: Doxyfile  conf.py  index.rst
docs/api-reference/: bare.rst  index.rst  vfs.rst
include/ramfs/: ramfs.h  vfs.h
src/: ramfs.c  ramfs_rbtree.c  ramfs_vector.c  rbtree.c  rbtree.h  vfs.c
tests/: create.c  init.c  meson.build  mkdir.c  open.c  pass_deinit_test.c  pass_issue_1_test.c  pass_read_test.c  pass_rmdir_test.c  pass_unlink_test.c  seek.c  write.c
