e = executable('init', 'init.c',
    dependencies: [ramfs_dep],
)
test('init', e)

e = executable('deinit', 'deinit.c',
    dependencies: [ramfs_dep],
)
test('deinit', e)

e = executable('mkdir', 'mkdir.c',
    dependencies: [ramfs_dep],
)
test('mkdir', e)

e = executable('rmdir', 'rmdir.c',
    dependencies: [ramfs_dep],
)
test('rmdir', e)

e = executable('create', 'create.c',
    dependencies: [ramfs_dep],
)
test('create', e)

e = executable('unlink', 'unlink.c',
    dependencies: [ramfs_dep],
)
test('unlink', e)

e = executable('open', 'open.c',
    dependencies: [ramfs_dep],
)
test('open', e)

e = executable('write', 'write.c',
    dependencies: [ramfs_dep],
)
test('write', e)

e = executable('read', 'read.c',
    dependencies: [ramfs_dep],
)
test('read', e)

e = executable('seek', 'seek.c',
    dependencies: [ramfs_dep],
)
test('seek', e)

e = executable('issue_1', 'issue_1.c',
    dependencies: [ramfs_dep],
)
test('issue_1', e)
